--- a/spec/runner.html
+++ b/spec/runner.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
+
+        <!-- All specs should pass with or without jQuery+Modernizr being referenced -->
+        <!--
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+        <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-1.7-development-only.js"></script>
+        -->
+
         <!-- jasmine -->
         <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css" />
         <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
@@ -10,10 +17,6 @@
         <!-- our jasmine extensions -->
         <link rel="stylesheet" type="text/css" href="lib/jasmine.extensions.css" />
         <script type="text/javascript" src="lib/jasmine.extensions.js"></script>
-
-        <!-- All specs should pass with or without jQuery+Modernizr being referenced -->
-        <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.js"></script>-->
-        <!--<script type="text/javascript" src="http://modernizr.com/downloads/modernizr-latest.js"></script>-->
 
         <!-- knockout polyfills -->
         <script type="text/javascript" src="lib/innershiv.js"></script>
@@ -41,7 +44,6 @@
         <script type="text/javascript" src="observableArrayChangeTrackingBehaviors.js"></script>
         <script type="text/javascript" src="dependentObservableBehaviors.js"></script>
         <script type="text/javascript" src="dependentObservableDomBehaviors.js"></script>
-        <script type="text/javascript" src="pureComputedBehaviors.js"></script>
         <script type="text/javascript" src="extenderBehaviors.js"></script>
         <script type="text/javascript" src="domNodeDisposalBehaviors.js"></script>
         <script type="text/javascript" src="mappingHelperBehaviors.js"></script>
@@ -54,10 +56,6 @@
         <script type="text/javascript" src="jsonPostingBehaviors.js"></script>
         <script type="text/javascript" src="nativeTemplateEngineBehaviors.js"></script>
         <script type="text/javascript" src="utilsBehaviors.js"></script>
-        <script type="text/javascript" src="components/loaderRegistryBehaviors.js"></script>
-        <script type="text/javascript" src="components/defaultLoaderBehaviors.js"></script>
-        <script type="text/javascript" src="components/componentBindingBehaviors.js"></script>
-        <script type="text/javascript" src="components/customElementBehaviors.js"></script>
 
         <!-- Default bindings -->
         <script type="text/javascript" src="defaultBindings/attrBehaviors.js"></script>
@@ -76,7 +74,6 @@
         <script type="text/javascript" src="defaultBindings/styleBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/submitBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/textBehaviors.js"></script>
-        <script type="text/javascript" src="defaultBindings/textInputBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/uniqueNameBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/valueBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/visibleBehaviors.js"></script>
